--- a/FrontEnd/src/styles/NavBar.css
+++ b/FrontEnd/src/styles/NavBar.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:rgb(0, 53, 86);
+    background-color:#1976d2;
+;
     padding: 8px 12px;
 }
 
