--- a/FrontEnd/src/styles/product.css
+++ b/FrontEnd/src/styles/product.css
@@ -49,29 +49,27 @@
 }
 
 .product-description-row {
-  margin-top: 10px;
+  margin-top: 60px;
   margin-bottom: 10px;
-  height: 500px;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+
+.product-info h3,
+.product-info h2 {
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.product-video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* css for detailed product*/
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-.column > img {
-  float: left;
-  width: 70%;
-  margin-top: 20px;
-  height: 100%; /* Should be removed. Only for demonstration */
-}
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
 /* Product Buttons Styles */
 
